[package]
name = "multipart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = { version = "3.0.4", optional = true }
bytes = "1.1.0"
futures = "0.3.21"
http = "0.2.6"
httparse = "1.6.0"
memchr = "2.4.1"
mime = "0.3.16"
thiserror = "1.0.30"

[features]
actix = ["dep:actix-http"]

[dev-dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.2"
